Super hacky CSS to fix collapsing navbar

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,4 +19,12 @@ body {
     padding-right: 15px;
     margin-bottom:0;
   }
+
+  .pull-right {
+    width: 200px;
+  }
+
+  .navbar-text {
+    margin-left: 15px;
+  }
 }
